# lfric_reader

src/cxx/: CMakeLists.txt
src/cxx/Plugin/Reader/: CMakeLists.txt  netCDFLFRicReaderUtils.cxx
src/cxx/Plugin/Reader/test/: CMakeLists.txt  vtkNetCDFLFRicReaderRegressionTest.cxx
